# Elements

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/basics/: DynamicMem.hpp  DynamicMemAlloc.hpp  StaticMem.hpp  Vec.hpp  VecImpl.hpp
tests/: CMakeLists.txt  test.cpp
